--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,43 @@ div.DrinkScroll>img {
     background-color: #DEDEDE;
     text-align: left;
 }
+
+.main {
+    margin-bottom: 70px;
+}
+
+.navbar {
+    left:0;
+    background-color: #DBBEA1;
+    position: fixed;
+    bottom:0;
+    width: 100%;
+    overflow: auto;
+  }
+
+  /* Style the links inside the navigation bar */
+.navbar a {
+    float: left;
+    width: 20%;
+    text-align: center;
+    padding: 12px 0;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 36px;
+  }
+  
+  /* Change the color of links on hover */
+  .navbar a:hover {
+    color: #D34F73;
+    background-color: #DBBEA1;
+  }
+  
+  /* Add a green background color to the active link */
+  .navbar a.active {
+    color: #D34F73;
+  }
+  
+  /* Hide the link that should open and close the navbar on small screens */
+  .navbar .icon {
+    display: none;
+  }
